# BotX

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yaml
botx/: __init__.py  bot.py  guild.py  logging.py  qzone.py
botx/models/: __init__.py  command.py  group.py  message.py  notice.py  request.py  user.py
tests/: __main__.py
